Actual deitheme... committed all @ once. Oops.
Signed-off-by: Perceval FARAMAZ <perfaram@windowslive.com>

--- a/layouts/partials/article-share.html
+++ b/layouts/partials/article-share.html
@@ -1,8 +1,5 @@
 <ul class="share-buttons">
-    <li>{{ .Site.Data.l10n.share.title }}</li>
-    <li>
-        <a class="icon-facebook-squared" href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;" title="{{ .Site.Data.l10n.share.facebook }}"></a>
-    </li>
+    <li>{{ .Site.Data.l10n.share.title }}</li>-
     <li>
         <a class="icon-twitter" href="https://twitter.com/share?text={{ .Title }}&amp;url={{ .Permalink }}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;" title="{{ .Site.Data.l10n.share.twitter }}"></a>
     </li>
