--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,3 +1,10 @@
 {{ partial "header" . }}
-{{ partial "article-list" . }}
+{{ partial "banner" . }}
+<div class="l-content">
+	{{ partial "product-grid" . }}
+    <div class="information pure-g">
+		{{ .Content }}
+    </div> <!-- end information -->
+</div> <!-- end l-content -->
+
 {{ partial "footer" . }}
