--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,42 +3,116 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{{ if .IsNode}}{{ .Title }} &middot; {{end}}{{ .Site.Title }}</title>
-        <meta name="author">
+        <title>{{ if and (not .IsNode) (not .IsHome)}}{{ .Title }} &middot; {{end}}{{ .Site.Title }}</title>
+        <meta name="author" content="{{ .Site.Params.site_author }}">
         <meta name="description" content="{{ .Site.Params.site_description }}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {{ .Hugo.Generator }}
         <link href="{{ "post/index.xml" | absURL }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title }}" />
         <link href="{{ "post/index.xml" | absURL }}" rel="feed" type="application/rss+xml" title="{{ $.Site.Title }}" />
-        <link href='//fonts.googleapis.com/css?family=Roboto:400,300,700|Noto+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="{{ "css/styles.css" | absURL }}">
+
         <link rel="icon" href="{{ "favicon.ico" | absURL }}">
-        <link rel="apple-touch-icon" href="{{ "apple-touch-icon.png" | absURL }}" />
-        <link rel="stylesheet" href="{{ "css/highlightjs/monokai.css" | absURL }}">
+        <!--<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">-->
+        <link rel="stylesheet" href="{{ "css/pure.css" | absURL }}">
         <script src="{{ "js/vendor/modernizr-2.8.0.min.js" | absURL }}"></script>
+
+        <!--[if lte IE 8]>
+            <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-old-ie-min.css">
+        <![endif]-->
+        <!--[if gt IE 8]><!-->
+            <!--<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">-->
+            <link rel="stylesheet" href="{{ "css/grids-responsive-min.css" | absURL }}">
+        <!--<![endif]-->
+        
+        <link rel="stylesheet" href="{{ "css/deitheme.css" | absURL }}">
+        <link rel="stylesheet" href="{{ "css/css-responsive-nav.css" | absURL }}">
+
+        <style>
+        /*
+        When setting the primary font stack, apply it to the Pure grid units along
+        with `html`, `button`, `input`, `select`, and `textarea`. Pure Grids use
+        specific font stacks to ensure the greatest OS/browser compatibility.
+        */
+        html, button, input, select, textarea,
+        .pure-g [class *= "pure-u"] {
+            /* Set your content font stack here: */
+            font-family: Helvetica, sans-serif;
+        }
+        </style>
+
         {{ range .Site.Params.custom_css }}
         <link rel="stylesheet" href="{{ . | absURL }}">
         {{ end }}
-        <style>
-        .site-header h2 .logo {
-        background: url({{ .Site.Params.header_background | absURL }}) no-repeat 0 0;
-        }
-        @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
-          .site-header h2 .logo {
-            background-image: url({{ .Site.Params.header_background | absURL }});
-        }}
-       .site-header {
-         background: #2a373d url({{ .Site.Params.header_background | absURL }}) no-repeat center center;
-         z-index: -1;
-        }
-        </style>
     </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <header class="site-header">
-          <div class="transparent-layer">
-              <h2>{{ .Site.Params.header_title }}</h2>
-          </div>
-        </header>
+    
+<body>
+<div class="custom-wrapper pure-g" id="menu">
+    <div class="pure-u-1 pure-u-md-1-3">
+    </div>
+
+    <div class="pure-u-1 pure-u-md-1-3 top-disappearing-branding">
+        <div class="pure-menu">
+            <div class="pure-menu-brand">
+                <a href="{{ .Site.BaseURL }}" class="pure-menu-brand pure-menu-heading">deicoon.</a>
+                <ul class="pure-menu-subtitle-stack">
+                    <li class="pure-menu-subtitle-item">Niche software,</li>
+                    <li class="pure-menu-subtitle-item">For everyone.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="pure-u-1 pure-u-md-1-3">
+        <nav id="responsivemenu">
+            <label for="tm" id="toggle-responsivemenu" class="resped-branding">deicoon. <span class="drop-icon">▾</span></label>
+            <input type="checkbox" id="tm">
+
+            <ul class="main-responsivemenu cf">
+                {{ $currentPageLink := .Permalink }}
+                {{ range .Site.Params.Topmenuitems }} 
+                
+                    {{ $.Scratch.Set "found" 0 }}
+
+                    {{ with $.Site.GetPage "page" .}}
+                        {{ $.Scratch.Set "found" 1 }}
+                        {{ if eq .Permalink $currentPageLink }}
+                            <li><a class="menuitem-active" href="{{ .Permalink }}">{{ .Title }}</a></li>
+                        {{ else }}
+                            <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+                        {{end}}
+                    {{ end }}
+
+                    {{ if eq ($.Scratch.Get "found") 0 }}
+                        {{ $sectionName := . }}
+                        {{ with $.Site.GetPage "section" .}}
+                            {{ if (not (isset .Params "menu_listchildren")) | or (eq .Params.menu_listchildren false) }}
+                                {{ if eq .Permalink $currentPageLink }}
+                                    <li><a class="menuitem-active" href="{{ .Permalink }}">{{ .Title }}</a></li>
+                                {{ else }}
+                                    <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+                                {{end}}
+                            {{ else }}
+                                <li>
+                                    <a href="#">{{ .Title }} 
+                                        <span class="drop-icon">▾</span>
+                                        <label title="{{ .Title }} drop-down toggle" class="drop-icon" for="sm0">▾</label>
+                                    </a>
+                                    <input type="checkbox" id="sm0">
+                                    <ul class="sub-responsivemenu">
+                                        {{ range $.Site.Pages }} 
+                                            {{ if eq .Type $sectionName }}
+                                                {{ .Render "menu-li" }}
+                                            {{ end }}
+                                        {{ end }}
+                                    </ul>
+                                </li>
+                            {{end}}
+                        {{ end }}
+                    {{end}}
+                    
+                {{ end }}
+            </ul>
+        </nav>
+    </div>
+</div>
+
