Pagination properly styled; Taxonomies now [tag, topics]
Signed-off-by: Perceval FARAMAZ <perfaram@windowslive.com>

--- a/static/css/deitheme.css
+++ b/static/css/deitheme.css
@@ -573,3 +573,11 @@ a.unsplashtag {
     border-radius: 3px;
     margin-bottom: 5px;
 }
+
+p.paginator-newer {
+    text-align: right;
+}
+
+p.paginator-older {
+
+}
