--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,16 +1,21 @@
-<div class="pagination">
-<nav>
-{{ if or (.Paginator.HasPrev) (.Paginator.HasNext) }}
-    {{ if .Paginator.HasPrev }}
-	<a class="btn newer" href="{{.Paginator.Prev.URL}}" title="{{ .Site.Data.l10n.pagination.newer }}">&laquo; {{ .Site.Data.l10n.pagination.newer }}</a>
-	{{ end }}
-{{ end }}
-	<p class="counter">{{ .Site.Data.l10n.pagination.page }} {{ .Paginator.PageNumber}} {{ .Site.Data.l10n.pagination.of }} {{.Paginator.TotalPages}}</p>
-
-{{ if or (.Paginator.HasPrev) (.Paginator.HasNext) }}
-	{{ if .Paginator.HasNext }}
-	<a class="btn older" href="{{.Paginator.Next.URL}}" title="{{ .Site.Data.l10n.pagination.older }}">{{ .Site.Data.l10n.pagination.older }} &raquo;</a>
-	{{ end }}
-{{ end }}
-</nav>
+<div class="information pure-g pagination">
+	<div class="pure-u-1 pure-u-md-1-3">
+		{{ if or (.Paginator.HasPrev) (.Paginator.HasNext) }}
+		    {{ if .Paginator.HasPrev }}
+			<p class="paginator-newer"><a class="btn paginator-newer" href="{{.Paginator.Prev.URL}}" title="{{ .Site.Data.l10n.pagination.newer }}">&laquo; {{ .Site.Data.l10n.pagination.newer }}</a></p>
+			{{ end }}
+		{{ end }}
+	</div>
+	<div class="pure-u-1 pure-u-md-1-3">
+		<nav>
+			<p class="counter center">{{ .Site.Data.l10n.pagination.page }} {{ .Paginator.PageNumber}} {{ .Site.Data.l10n.pagination.of }} {{.Paginator.TotalPages}}</p>
+		</nav>
+	</div>
+	<div class="pure-u-1 pure-u-md-1-3">
+		{{ if or (.Paginator.HasPrev) (.Paginator.HasNext) }}
+			{{ if .Paginator.HasNext }}
+			<p class="paginator-older"><a class="btn paginator-older" href="{{.Paginator.Next.URL}}" title="{{ .Site.Data.l10n.pagination.older }}">{{ .Site.Data.l10n.pagination.older }} &raquo;</a></p>
+			{{ end }}
+		{{ end }}
+	</div>
 </div>
