Menubar + logo font now Archivo Narrow
Signed-off-by: Perceval FARAMAZ <perfaram@windowslive.com>

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -24,6 +24,8 @@
             <link rel="stylesheet" href="{{ "css/grids-responsive-min.css" | absURL }}">
         <!--<![endif]-->
         
+        <link rel="stylesheet" media="screen" href="{{ "font/ArchivoNarrow/archivonarrow.css" | absURL }}">
+
         <link rel="stylesheet" href="{{ "css/deitheme.css" | absURL }}">
         <link rel="stylesheet" href="{{ "css/css-responsive-nav.css" | absURL }}">
 
@@ -46,7 +48,7 @@
     </head>
     
 <body>
-<div class="custom-wrapper pure-g" id="menu">
+<div class="custom-wrapper pure-g topmenu" id="menu">
     <div class="pure-u-1 pure-u-md-1-3">
     </div>
 
