--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,10 +1,20 @@
 {{ partial "header" . }}
-<div class="container clearfix">
+{{ .Scratch.Set "color" "striped-deicolor" }}
+{{ partial "banner" . }}
+<div class="l-content">
+	<div class="information pure-g">
+		<div class="pure-u-1 pure-u-md-1-1 blog-post">
+        	<p class="center"><em>{{ .Site.Data.l10n.page_not_found.subtitle }}</em></p>
+        	<a class="btn home" href="{{ .Site.BaseURL }}" title="{{ .Site.Data.l10n.page_not_found.back_to_home }}">&laquo; {{ .Site.Data.l10n.page_not_found.back_to_home }}</a>
+    	</div>
+    </div> <!-- end information -->
+</div> <!-- end l-content -->
+
+<!--<div class="container clearfix">
     <main role="main" class="content">
             <a class="btn home" href="{{ .Site.BaseURL }}" title="{{ .Site.Data.l10n.article.back_to_home }}">&laquo; {{ .Site.Data.l10n.article.back_to_home }}</a>
             <h1>{{ .Site.Data.l10n.page_not_found.title }}</h1>
             <p>{{ .Site.Data.l10n.page_not_found.subtitle }}</p>
     </main>
-    {{ partial "author" . }}
-</div>
+</div>-->
 {{ partial "footer" . }}
