Removed post-share
Signed-off-by: Perceval FARAMAZ <perfaram@windowslive.com>

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -27,7 +27,7 @@
 			<div class="l-box blog-post-content">
         		{{ .Content | markdownify }}
         	</div>
-            {{ partial "article-share" .}}
+            <!--{{ partial "article-share" .}}-->
         </div>
     </div> <!-- end information -->
 </div> <!-- end l-content -->
